k8s/reverse-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy
  namespace: recruiter-feedback
spec:
  type: ClusterIP
  selector:
    app: reverse-proxy
  ports:
    - port: 80
      targetPort: 80
